[package]
name = "deser_derive"
license = "MIT"
description = "derive macros accompanying the `deser` crate"
repository = "https://github.com/Anonym234/deser_derive"
version = "1.0.0"
edition = "2021"


[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.67"
quote = "1.0.33"
syn = "2.0.37"
